--- a/res/css/2048/2048.css
+++ b/res/css/2048/2048.css
@@ -7,7 +7,8 @@
 }
 
 .new-game-btn {
-    margin-left: 10px;
+    margin-left: 20px;
+    margin-bottom:5px;
 }
 
 .game-2048-table {
@@ -23,11 +24,20 @@
     text-align: center;
     width: 100px;
     height: 100px;
+    /* height: auto; */
     /* border: 1px solid black; */
+}
+
+.value-display {
+    height: 15px;
+    color: #968f84;
+    font-family:"Indie Flower";
+    /* background-color: lightgoldenrodyellow; */
 }
 
 .empty-cell {
     background-color: gray;
+    border: 1px solid black;
 }
 
 .thumbnail {
